Lost commit progress, but made minor adjustments. Will be adding responsivness tommorow

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="card-value" id="timer">05:32</div>
                 <div class="value-subtext" id="subject"><b>Kyle Doe:</b> Live Ticket in Progress</div>
                 <div class="value-subtext">
-                    <h5>● Connected to:</h5>
+                    <h5>● Connected to: </h5>
                 </div>
                 <div class="value-subtext">Paul Steel</div>
                 <div class="screen-share-controls">
@@ -216,6 +216,11 @@
                         <div class="time-stamp">[8:02AM]</div>
                         <div class="user-name">Kyle Doe:</div>
                         <div class="ticket-message">Not a problem, do I have permission to access your station?</div>
+                    </div>
+                    <div class="chat-row">
+                        <div class="time-stamp">[8:03AM]</div>
+                        <div class="user-name">Paul Steel:</div>
+                        <div class="ticket-message">Of course, not a problem.</div>
                     </div>
                     <div class="search">
                         <input class="search-bar" type="text" placeholder="Message">
