Fixed bug with images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Sidebar -- Navigation -->
         <aside class="sidebar">
             <a href="/" class="logo">
-                <img class="logo-image" src="/img/GroundCtrl Logo Slate Grey and Lime Green.png"
+                <img class="logo-image" src="./img/GroundCtrl Logo Slate Grey and Lime Green.png"
                     alt="GroundCtrl brand logo of an air traffic control tower, the brand is an SaaS help desk">
                 <span class="logo-text"></span>
             </a>
@@ -101,7 +101,7 @@
                 <input class="search-bar" type="text" placeholder="Search all tickets (#154353456GC)">
             </div>
             <div class="user-profile">
-                <a href="/"><img class="user-image" src="/img/—Pngtree—user profile avatar_13369988.png"
+                <a href="/"><img class="user-image" src="./img/—Pngtree—user profile avatar_13369988.png"
                         alt="user profile picture"></a>
                 <div class="user-info">
                     <span class="user-name">Kyle Doe</span>
@@ -196,7 +196,7 @@
                             <span class="connection-time"><em>00:04:32</em></span>
                         </div>
                         <div class="screen-share-display">
-                            <img src="/img/fakescreenshot.jpg" alt="Remote desktop view">
+                            <img src="./img/fakescreenshot.jpg" alt="Remote desktop view">
                         </div>
                         <div class="screen-share-controls">
                             <button class="btn">Take Control</button>
